# livekit-server

./: .gitignore  pyproject.toml
agent/: agents.py  basic_agent.py  config.py  main.py
agent/agents/: __init__.py  base.py  feedback_agent.py  my_agent.py
agent/types/: __init__.py  user_data.py
livekit_demo/: agent.py  basic_agent.py  complete_agent.py
tests/: llm_similarity_test.py  llm_test.py
